WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185707
VM::shrinkFootprint should call collectNow(Sync) instead of collectSync so it also eagerly sweeps
https://bugs.webkit.org/show_bug.cgi?id=185707
Summary
VM::shrinkFootprint should call collectNow(Sync) instead of collectSync so it...
Saam Barati
Reported
2018-05-16 17:51:46 PDT
...
Attachments
patch
(1.20 KB, patch)
2018-05-16 17:57 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-05-16 17:57:39 PDT
Created
attachment 340546
[details]
patch
Mark Lam
Comment 2
2018-05-16 18:01:14 PDT
Comment on
attachment 340546
[details]
patch r=me
WebKit Commit Bot
Comment 3
2018-05-16 22:21:27 PDT
Comment on
attachment 340546
[details]
patch Clearing flags on attachment: 340546 Committed
r231888
: <
https://trac.webkit.org/changeset/231888
>
WebKit Commit Bot
Comment 4
2018-05-16 22:21:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-05-16 22:22:22 PDT
<
rdar://problem/40321628
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug