VM::shrinkFootprint should call collectNow(Sync) instead of collectSync so it also eagerly sweeps https://bugs.webkit.org/show_bug.cgi?id=185707

Reviewed by Mark Lam.

* runtime/VM.cpp:
(JSC::VM::shrinkFootprint):


Canonical link: https://commits.webkit.org/201177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231888 268f45cc-cd09-0410-ab3c-d52691b4dbfc