Source/JavaScriptCore/runtime/VM.cpp
@@ -778,7 +778,7 @@ void VM::shrinkFootprint()
 {
     sanitizeStackForVM(this);
     deleteAllCode(DeleteAllCodeIfNotCollecting);
-    heap.collectSync();
+    heap.collectNow(Synchronousness::Sync);
     WTF::releaseFastMallocFreeMemory();
     // FIXME: Consider stopping various automatic threads here.
     // https://bugs.webkit.org/show_bug.cgi?id=185447
